marquee-indicator css

--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -16,3 +16,24 @@
   #top-bar.show {
     top: 0; /* slide down */
   }
+
+  #marqueecursor-indicator {
+  position: absolute;
+  pointer-events: none;
+  transform: translate(-50%, -150%);
+  z-index: 10;
+  padding: 6px 10px;
+  font-size: 16px;
+  font-family: 'favorit', sans-serif;
+  color:#A09966;
+  border-radius: 10px;
+  backdrop-filter: blur(2px);
+  white-space: nowrap;
+  user-select: none;
+  opacity: 1;
+  transition: opacity 0.2s ease;
+}
+
+#marquee-cursor-indicator.hidden {
+  opacity: 0;
+}
